--- a/server/package.json
+++ b/server/package.json
@@ -13,5 +13,8 @@
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "socket.io": "^4.5.4"
   }
 }
